<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBEB">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:background="@color/light_primary">

        <EditText
            android:id="@+id/enter_product_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="16dp"
            android:hint="@string/enter_product"
            android:textColor="@color/dark_grey"
            android:background="@drawable/action_button" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center"
            android:background="@color/light_primary">

            <Button
                android:id="@+id/get_nutrition_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/get_nutrition"
                android:textColor="@android:color/white"
                android:background="@drawable/primary_button" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:background="@drawable/secondary_button" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/product_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
