<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="36dp"
    android:paddingRight="36dp"
    android:background="#EBEBEB">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Dashboard -->
        <LinearLayout
            android:id="@+id/dashboard"
            android:orientation="vertical"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="10dp"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dashboard">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:text="@string/dashboard_title"
                android:textSize="19sp"
                android:textColor="@color/dark_grey"
                android:textAllCaps="true" />
            <TextView
                android:id="@+id/dashboard_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="70sp"
                android:text="281"
                android:textAllCaps="true" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:text="@string/dashboard_calories"
                android:textSize="19sp"
                android:textColor="@color/dark_grey"
                android:textAllCaps="true" />
        </LinearLayout>

        <EditText
            android:id="@+id/enter_product_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:drawableRight="@drawable/ic_camera"
            android:hint="@string/enter_product"
            android:textColor="@color/dark_grey"
            android:background="@drawable/enter_field" />

        <!-- History -->
        <LinearLayout
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/dark_grey"
                android:textStyle="bold"
                android:text="@string/history_label" />

            <ListView
                android:id="@+id/history_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
